before move createLight

--- a/visionSamples/FaceTracker/app/src/main/AndroidManifest.xml
+++ b/visionSamples/FaceTracker/app/src/main/AndroidManifest.xml
@@ -42,14 +42,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-
-
         </activity>
+        <activity android:name=".ui.camera.TestPureAnimationActivity"></activity>
+        <activity android:name=".RotateActivity"></activity>
+        <activity android:name=".MainActivity">
 
-        <activity android:name=".ui.camera.TestPureAnimationActivity">
-
-        </activity>
-        <activity android:name=".RotateActivity">
 
         </activity>
     </application>
