--- a/visionSamples/FaceTracker/app/src/main/AndroidManifest.xml
+++ b/visionSamples/FaceTracker/app/src/main/AndroidManifest.xml
@@ -35,15 +35,16 @@
             android:icon="@drawable/icon"
             android:label="Face Tracker"
             android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".FinishRecordActivity" />
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".FinishRecordActivity" />
-        <activity android:name=".SplashActivity"></activity>
     </application>
 
 </manifest>
