--- a/visionSamples/FaceTracker/app/build.gradle
+++ b/visionSamples/FaceTracker/app/build.gradle
@@ -25,11 +25,10 @@ dependencies {
     compile 'com.android.support:design:23.+'
     compile 'com.android.support:appcompat-v7:23.2.0'
 
-    compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
 
 
-
+    compile 'dev.dworks.libs:volleyplus:+'
 
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.appsflyer:af-android-sdk:4.6.2@aar'
