--- a/visionSamples/FaceTracker/app/build.gradle
+++ b/visionSamples/FaceTracker/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     compile 'com.google.firebase:firebase-messaging:10.0.1'
 
+    compile 'com.google.android.gms:play-services-plus:10.0.1'
+
 
     compile 'dev.dworks.libs:volleyplus:+'
 
